manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sg-webapp-service
spec:
  type: ClusterIP
  selector:
    app: sg-webapp
  ports:
    - port: 80
      targetPort: 3000
