manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sg-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - sg-webapp.com
      secretName: sg-webapp-tls
  rules:
    - host: sg-webapp.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sg-webapp-service
                port:
                  number: 80
